--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,23 @@
   border-radius: 50%;
   margin-right: 8px; /* Adjust as needed */
 }
+
+.dot2 {
+  list-style-type: square;
+  margin-left: 10px;
+}
+
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* Aspect ratio 16:9 (9 / 16 = 0.5625) */
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
