--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,10 @@
 #root {
     max-width: 1660px;
     margin: 0 auto;
-    border: 1px solid silver;
+    border: 1px solid rgb(250, 250, 250);
 
   }
+
 
 .font-title {
     font-family: 'Alfa Slab One', sans-serif;
